--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.0",
     "description": "a Sails application",
     "dependencies": {
+        "sails": "0.9.0",
         "grunt": "0.4.1",
         "optimist": "0.3.4",
         "passport": "latest",
