moved passport strategy to services/passport.js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "optimist": "0.3.4",
         "passport": "latest",
         "passport-local": "latest",
-        "bcrypt": "latest"
+        "bcrypt": "latest",
+        "pi-gpio": "latest"
     },
     "scripts": {
         "start": "node app.js",
